// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Poll Block should render AlreadyVoted 1`] = `
<DocumentFragment>
  <article
    class="css-nrshve-PollBlockWrapper ecm33wf3"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 css-1356oao-MuiTypography-root"
    >
      Question
    </h1>
    <div
      class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-1afd7jy-MuiTypography-root-lastChildNoGutter"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="css-1e4oizq-PollBlockVoting ecm33wf2"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-kctgaw-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Ja
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-kctgaw-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Nein
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="css-nh52ap-PollBlockMeta ecm33wf0"
    >
      21 Stimmen – Schliesst am 
      <time
        datetime="2033-01-01"
      >
        01.01.2033 00:00
      </time>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render AnonymousAlreadyVoted 1`] = `
<DocumentFragment>
  <article
    class="css-nrshve-PollBlockWrapper ecm33wf3"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 css-1356oao-MuiTypography-root"
    >
      Question
    </h1>
    <div
      class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-1afd7jy-MuiTypography-root-lastChildNoGutter"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="css-h8emd-PollBlockVoteResultList ecm33wf1"
    >
      <div
        class="css-1gble97-PollBlockResultWrapper e1v5g0xr6"
      >
        <div
          class="css-63kw5t-PollBlockResultInfo e1v5g0xr5"
        >
          <div
            class="css-115xnt3-PollBlockResultName e1v5g0xr4"
          >
            Ja
          </div>
          <div
            class="css-qn23nf-PollBlockResultPercentage e1v5g0xr3"
          >
            52%
          </div>
        </div>
        <div
          class="css-56q0p9-PollBlockVoteBar e1v5g0xr2"
        >
          <div
            class="css-d140y6-PollBlockVoteBarFill e1v5g0xr1"
          />
          <div
            class="css-q7kpoh-PollBlockVoteBarText e1v5g0xr0"
          >
            11 Stimmen
          </div>
        </div>
      </div>
      <div
        class="css-1gble97-PollBlockResultWrapper e1v5g0xr6"
      >
        <div
          class="css-63kw5t-PollBlockResultInfo e1v5g0xr5"
        >
          <div
            class="css-115xnt3-PollBlockResultName e1v5g0xr4"
          >
            Nein
          </div>
          <div
            class="css-qn23nf-PollBlockResultPercentage e1v5g0xr3"
          >
            48%
          </div>
        </div>
        <div
          class="css-56q0p9-PollBlockVoteBar e1v5g0xr2"
        >
          <div
            class="css-te9pes-PollBlockVoteBarFill e1v5g0xr1"
          />
          <div
            class="css-1kbfvnx-PollBlockVoteBarText e1v5g0xr0"
          >
            10 Stimmen
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-nh52ap-PollBlockMeta ecm33wf0"
    >
      21 Stimmen – Schliesst am 
      <time
        datetime="2033-01-01"
      >
        01.01.2033 00:00
      </time>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render AnonymousVoting 1`] = `
<DocumentFragment>
  <article
    class="css-nrshve-PollBlockWrapper ecm33wf3"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 css-1356oao-MuiTypography-root"
    >
      Question
    </h1>
    <div
      class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-1afd7jy-MuiTypography-root-lastChildNoGutter"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="css-1e4oizq-PollBlockVoting ecm33wf2"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-kctgaw-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Ja
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-kctgaw-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Nein
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="css-nh52ap-PollBlockMeta ecm33wf0"
    >
      21 Stimmen – Schliesst am 
      <time
        datetime="2033-01-01"
      >
        01.01.2033 00:00
      </time>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render AnonymousVotingPlay 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -31,37 +31,77 @@
            </span>
          </p>
        </div>
      </div>
      <div
-       class="css-1e4oizq-PollBlockVoting ecm33wf2"
+       class="css-h8emd-PollBlockVoteResultList ecm33wf1"
      >
-       <button
-         class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-kctgaw-MuiButtonBase-root-MuiButton-root"
-         tabindex="0"
-         type="button"
+       <div
+         class="css-1gble97-PollBlockResultWrapper e1v5g0xr6"
+       >
+         <div
+           class="css-63kw5t-PollBlockResultInfo e1v5g0xr5"
+         >
+           <div
+             class="css-115xnt3-PollBlockResultName e1v5g0xr4"
            >
              Ja
-         <span
-           class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+           </div>
+           <div
+             class="css-qn23nf-PollBlockResultPercentage e1v5g0xr3"
+           >
+             55%
+           </div>
+         </div>
+         <div
+           class="css-56q0p9-PollBlockVoteBar e1v5g0xr2"
+         >
+           <div
+             class="css-6pz6b3-PollBlockVoteBarFill e1v5g0xr1"
            />
-       </button>
-       <button
-         class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-kctgaw-MuiButtonBase-root-MuiButton-root"
-         tabindex="0"
-         type="button"
+           <div
+             class="css-1kbfvnx-PollBlockVoteBarText e1v5g0xr0"
+           >
+             12 Stimmen
+           </div>
+         </div>
+       </div>
+       <div
+         class="css-1gble97-PollBlockResultWrapper e1v5g0xr6"
+       >
+         <div
+           class="css-63kw5t-PollBlockResultInfo e1v5g0xr5"
          >
+           <div
+             class="css-115xnt3-PollBlockResultName e1v5g0xr4"
+           >
              Nein
-         <span
-           class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+           </div>
+           <div
+             class="css-qn23nf-PollBlockResultPercentage e1v5g0xr3"
+           >
+             45%
+           </div>
+         </div>
+         <div
+           class="css-56q0p9-PollBlockVoteBar e1v5g0xr2"
+         >
+           <div
+             class="css-1cibdzq-PollBlockVoteBarFill e1v5g0xr1"
            />
-       </button>
+           <div
+             class="css-q7kpoh-PollBlockVoteBarText e1v5g0xr0"
+           >
+             10 Stimmen
+           </div>
+         </div>
        </div>
+     </div>
      <div
        class="css-nh52ap-PollBlockMeta ecm33wf0"
      >
-       21 Stimmen – Schliesst am 
+       22 Stimmen – Schliesst am 
        <time
          datetime="2033-01-01"
        >
          01.01.2033 00:00
        </time>"
`;

exports[`Poll Block should render Default 1`] = `
<DocumentFragment>
  <article
    class="css-nrshve-PollBlockWrapper ecm33wf3"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 css-1356oao-MuiTypography-root"
    >
      Question
    </h1>
    <div
      class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-1afd7jy-MuiTypography-root-lastChildNoGutter"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="css-h8emd-PollBlockVoteResultList ecm33wf1"
    >
      <div
        class="css-1gble97-PollBlockResultWrapper e1v5g0xr6"
      >
        <div
          class="css-63kw5t-PollBlockResultInfo e1v5g0xr5"
        >
          <div
            class="css-115xnt3-PollBlockResultName e1v5g0xr4"
          >
            Ja
          </div>
          <div
            class="css-qn23nf-PollBlockResultPercentage e1v5g0xr3"
          >
            52%
          </div>
        </div>
        <div
          class="css-56q0p9-PollBlockVoteBar e1v5g0xr2"
        >
          <div
            class="css-1pyc8ex-PollBlockVoteBarFill e1v5g0xr1"
          />
          <div
            class="css-1kbfvnx-PollBlockVoteBarText e1v5g0xr0"
          >
            11 Stimmen
          </div>
        </div>
      </div>
      <div
        class="css-1gble97-PollBlockResultWrapper e1v5g0xr6"
      >
        <div
          class="css-63kw5t-PollBlockResultInfo e1v5g0xr5"
        >
          <div
            class="css-115xnt3-PollBlockResultName e1v5g0xr4"
          >
            Nein
          </div>
          <div
            class="css-qn23nf-PollBlockResultPercentage e1v5g0xr3"
          >
            48%
          </div>
        </div>
        <div
          class="css-56q0p9-PollBlockVoteBar e1v5g0xr2"
        >
          <div
            class="css-1itrzla-PollBlockVoteBarFill e1v5g0xr1"
          />
          <div
            class="css-q7kpoh-PollBlockVoteBarText e1v5g0xr0"
          >
            10 Stimmen
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-nh52ap-PollBlockMeta ecm33wf0"
    >
      21 Stimmen – Schliesst am 
      <time
        datetime="2033-01-01"
      >
        01.01.2033 00:00
      </time>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render Voting 1`] = `
<DocumentFragment>
  <article
    class="css-nrshve-PollBlockWrapper ecm33wf3"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 css-1356oao-MuiTypography-root"
    >
      Question
    </h1>
    <div
      class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-1afd7jy-MuiTypography-root-lastChildNoGutter"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="css-1e4oizq-PollBlockVoting ecm33wf2"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-kctgaw-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Ja
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-kctgaw-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Nein
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="css-nh52ap-PollBlockMeta ecm33wf0"
    >
      21 Stimmen – Schliesst am 
      <time
        datetime="2033-01-01"
      >
        01.01.2033 00:00
      </time>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render VotingClosed 1`] = `
<DocumentFragment>
  <article
    class="css-nrshve-PollBlockWrapper ecm33wf3"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 css-1356oao-MuiTypography-root"
    >
      Question
    </h1>
    <div
      class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-1afd7jy-MuiTypography-root-lastChildNoGutter"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="css-h8emd-PollBlockVoteResultList ecm33wf1"
    >
      <div
        class="css-1gble97-PollBlockResultWrapper e1v5g0xr6"
      >
        <div
          class="css-63kw5t-PollBlockResultInfo e1v5g0xr5"
        >
          <div
            class="css-115xnt3-PollBlockResultName e1v5g0xr4"
          >
            Ja
          </div>
          <div
            class="css-qn23nf-PollBlockResultPercentage e1v5g0xr3"
          >
            52%
          </div>
        </div>
        <div
          class="css-56q0p9-PollBlockVoteBar e1v5g0xr2"
        >
          <div
            class="css-1pyc8ex-PollBlockVoteBarFill e1v5g0xr1"
          />
          <div
            class="css-1kbfvnx-PollBlockVoteBarText e1v5g0xr0"
          >
            11 Stimmen
          </div>
        </div>
      </div>
      <div
        class="css-1gble97-PollBlockResultWrapper e1v5g0xr6"
      >
        <div
          class="css-63kw5t-PollBlockResultInfo e1v5g0xr5"
        >
          <div
            class="css-115xnt3-PollBlockResultName e1v5g0xr4"
          >
            Nein
          </div>
          <div
            class="css-qn23nf-PollBlockResultPercentage e1v5g0xr3"
          >
            48%
          </div>
        </div>
        <div
          class="css-56q0p9-PollBlockVoteBar e1v5g0xr2"
        >
          <div
            class="css-1itrzla-PollBlockVoteBarFill e1v5g0xr1"
          />
          <div
            class="css-q7kpoh-PollBlockVoteBarText e1v5g0xr0"
          >
            10 Stimmen
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-nh52ap-PollBlockMeta ecm33wf0"
    >
      21 Stimmen – Abstimmung beendet.
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render VotingPlay 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -31,37 +31,77 @@
            </span>
          </p>
        </div>
      </div>
      <div
-       class="css-1e4oizq-PollBlockVoting ecm33wf2"
+       class="css-h8emd-PollBlockVoteResultList ecm33wf1"
      >
-       <button
-         class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-kctgaw-MuiButtonBase-root-MuiButton-root"
-         tabindex="0"
-         type="button"
+       <div
+         class="css-1gble97-PollBlockResultWrapper e1v5g0xr6"
+       >
+         <div
+           class="css-63kw5t-PollBlockResultInfo e1v5g0xr5"
+         >
+           <div
+             class="css-115xnt3-PollBlockResultName e1v5g0xr4"
            >
              Ja
-         <span
-           class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+           </div>
+           <div
+             class="css-qn23nf-PollBlockResultPercentage e1v5g0xr3"
+           >
+             55%
+           </div>
+         </div>
+         <div
+           class="css-56q0p9-PollBlockVoteBar e1v5g0xr2"
+         >
+           <div
+             class="css-6pz6b3-PollBlockVoteBarFill e1v5g0xr1"
            />
-       </button>
-       <button
-         class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-kctgaw-MuiButtonBase-root-MuiButton-root"
-         tabindex="0"
-         type="button"
+           <div
+             class="css-1kbfvnx-PollBlockVoteBarText e1v5g0xr0"
+           >
+             12 Stimmen
+           </div>
+         </div>
+       </div>
+       <div
+         class="css-1gble97-PollBlockResultWrapper e1v5g0xr6"
+       >
+         <div
+           class="css-63kw5t-PollBlockResultInfo e1v5g0xr5"
          >
+           <div
+             class="css-115xnt3-PollBlockResultName e1v5g0xr4"
+           >
              Nein
-         <span
-           class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+           </div>
+           <div
+             class="css-qn23nf-PollBlockResultPercentage e1v5g0xr3"
+           >
+             45%
+           </div>
+         </div>
+         <div
+           class="css-56q0p9-PollBlockVoteBar e1v5g0xr2"
+         >
+           <div
+             class="css-1cibdzq-PollBlockVoteBarFill e1v5g0xr1"
            />
-       </button>
+           <div
+             class="css-q7kpoh-PollBlockVoteBarText e1v5g0xr0"
+           >
+             10 Stimmen
+           </div>
+         </div>
        </div>
+     </div>
      <div
        class="css-nh52ap-PollBlockMeta ecm33wf0"
      >
-       21 Stimmen – Schliesst am 
+       22 Stimmen – Schliesst am 
        <time
          datetime="2033-01-01"
        >
          01.01.2033 00:00
        </time>"
`;

exports[`Poll Block should render WihtoutPoll 1`] = `<DocumentFragment />`;

exports[`Poll Block should render WithClassName 1`] = `
<DocumentFragment>
  <article
    class="extra-classname css-nrshve-PollBlockWrapper ecm33wf3"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 css-1356oao-MuiTypography-root"
    >
      Question
    </h1>
    <div
      class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-1afd7jy-MuiTypography-root-lastChildNoGutter"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="css-h8emd-PollBlockVoteResultList ecm33wf1"
    >
      <div
        class="css-1gble97-PollBlockResultWrapper e1v5g0xr6"
      >
        <div
          class="css-63kw5t-PollBlockResultInfo e1v5g0xr5"
        >
          <div
            class="css-115xnt3-PollBlockResultName e1v5g0xr4"
          >
            Ja
          </div>
          <div
            class="css-qn23nf-PollBlockResultPercentage e1v5g0xr3"
          >
            52%
          </div>
        </div>
        <div
          class="css-56q0p9-PollBlockVoteBar e1v5g0xr2"
        >
          <div
            class="css-1pyc8ex-PollBlockVoteBarFill e1v5g0xr1"
          />
          <div
            class="css-1kbfvnx-PollBlockVoteBarText e1v5g0xr0"
          >
            11 Stimmen
          </div>
        </div>
      </div>
      <div
        class="css-1gble97-PollBlockResultWrapper e1v5g0xr6"
      >
        <div
          class="css-63kw5t-PollBlockResultInfo e1v5g0xr5"
        >
          <div
            class="css-115xnt3-PollBlockResultName e1v5g0xr4"
          >
            Nein
          </div>
          <div
            class="css-qn23nf-PollBlockResultPercentage e1v5g0xr3"
          >
            48%
          </div>
        </div>
        <div
          class="css-56q0p9-PollBlockVoteBar e1v5g0xr2"
        >
          <div
            class="css-1itrzla-PollBlockVoteBarFill e1v5g0xr1"
          />
          <div
            class="css-q7kpoh-PollBlockVoteBarText e1v5g0xr0"
          >
            10 Stimmen
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-nh52ap-PollBlockMeta ecm33wf0"
    >
      21 Stimmen – Schliesst am 
      <time
        datetime="2033-01-01"
      >
        01.01.2033 00:00
      </time>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render WithEmotion 1`] = `
<DocumentFragment>
  <article
    class="css-nrshve-PollBlockWrapper ecm33wf3"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 css-1356oao-MuiTypography-root"
    >
      Question
    </h1>
    <div
      class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-1afd7jy-MuiTypography-root-lastChildNoGutter"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="css-h8emd-PollBlockVoteResultList ecm33wf1"
    >
      <div
        class="css-1gble97-PollBlockResultWrapper e1v5g0xr6"
      >
        <div
          class="css-63kw5t-PollBlockResultInfo e1v5g0xr5"
        >
          <div
            class="css-115xnt3-PollBlockResultName e1v5g0xr4"
          >
            Ja
          </div>
          <div
            class="css-qn23nf-PollBlockResultPercentage e1v5g0xr3"
          >
            52%
          </div>
        </div>
        <div
          class="css-56q0p9-PollBlockVoteBar e1v5g0xr2"
        >
          <div
            class="css-1pyc8ex-PollBlockVoteBarFill e1v5g0xr1"
          />
          <div
            class="css-1kbfvnx-PollBlockVoteBarText e1v5g0xr0"
          >
            11 Stimmen
          </div>
        </div>
      </div>
      <div
        class="css-1gble97-PollBlockResultWrapper e1v5g0xr6"
      >
        <div
          class="css-63kw5t-PollBlockResultInfo e1v5g0xr5"
        >
          <div
            class="css-115xnt3-PollBlockResultName e1v5g0xr4"
          >
            Nein
          </div>
          <div
            class="css-qn23nf-PollBlockResultPercentage e1v5g0xr3"
          >
            48%
          </div>
        </div>
        <div
          class="css-56q0p9-PollBlockVoteBar e1v5g0xr2"
        >
          <div
            class="css-1itrzla-PollBlockVoteBarFill e1v5g0xr1"
          />
          <div
            class="css-q7kpoh-PollBlockVoteBarText e1v5g0xr0"
          >
            10 Stimmen
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-nh52ap-PollBlockMeta ecm33wf0"
    >
      21 Stimmen – Schliesst am 
      <time
        datetime="2033-01-01"
      >
        01.01.2033 00:00
      </time>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render WithError 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -31,10 +31,60 @@
            </span>
          </p>
        </div>
      </div>
      <div
+       class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardError MuiAlert-standard css-1f6gfio-MuiPaper-root-MuiAlert-root"
+       role="alert"
+     >
+       <div
+         class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
+       >
+         <svg
+           aria-hidden="true"
+           class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
+           data-testid="ErrorOutlineIcon"
+           focusable="false"
+           viewBox="0 0 24 24"
+         >
+           <path
+             d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
+           />
+         </svg>
+       </div>
+       <div
+         class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
+       >
+         Something went wrong with the user vote.
+       </div>
+     </div>
+     <div
+       class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardError MuiAlert-standard css-1f6gfio-MuiPaper-root-MuiAlert-root"
+       role="alert"
+     >
+       <div
+         class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
+       >
+         <svg
+           aria-hidden="true"
+           class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
+           data-testid="ErrorOutlineIcon"
+           focusable="false"
+           viewBox="0 0 24 24"
+         >
+           <path
+             d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
+           />
+         </svg>
+       </div>
+       <div
+         class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
+       >
+         Something went wrong with the poll vote.
+       </div>
+     </div>
+     <div
        class="css-1e4oizq-PollBlockVoting ecm33wf2"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-kctgaw-MuiButtonBase-root-MuiButton-root"
          tabindex="0""
`;
